k8s/overlays/staging/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-api
spec:
  rules:
    - host: api-staging.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-express-api
                port:
                  name: http
